# synthesis

./: .clang-format  .gitignore  .ignore  .session.vim  Cargo.toml  LICENSE  README.md  metaprompt.md  struct.md  synthesis.slnx  temp
.aiCoder/: default-plan-prompt.md  default-system-prompt.md  snippet-production-prompt.md  snippet-validation-prompt.md
.aiCoder/axiom/: plan-prompt.md  system-prompt.md
.cargo/: config.toml
.nvim/: rsync.toml
.nvim/xcodebuild/: devices.json  settings.json
app/darwin/: lib.rs
app/xbone/: Main.cpp  MicrosoftGameConfig.mgc  README.md  vcpkg.json  xbone.vcxproj  xbone.vcxproj.filters
base/: Cargo.toml
base-macro/: Cargo.toml
base-macro/src/: main.rs
base/src/: lib.rs
driver/include/: common  pch
engine/: Cargo.toml  build.rs
engine/engine.xcodeproj/: project.pbxproj
engine/engine.xcodeproj/xcuserdata/solmidnight.xcuserdatad/xcschemes/: xcschememanagement.plist
engine/src/: acoustics.rs  audio.metal  camera.metal  darwin.rs  fullscreen.metal  lib.rs  math.rs  palette.metal  raytrace.metal  structures.metal  ui3d.metal  ui3d.msl
gfx/: Cargo.toml
gfx/src/: lib.rs
lib/math/: Cargo.toml
lib/math/src/: lib.rs
math/src/: lib.rs
memvox/: Cargo.toml
memvox/src/: lib.rs
platform/: current_task_context.md
platform/darwin-old/: Cargo.toml  build.rs
platform/dx12/: Cargo.toml
synthesis/: Cargo.toml
synthesis/src/: main.rs
synthesis/synthesis.xcodeproj/: project.pbxproj
tower/iOS/: controller.h  controller.m  engine.h  main.m
xbone/: Main.cpp  pch.h  vcpkg-configuration.json
(+34 files in other folders)
