[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
const_for = "0.1.5"
objc2 = "*"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
objc2-metal-kit = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-ui-kit = "0.3.2"
paste = "1.0.15"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
